--- a/ai/12. 深度卷积神经网络.md
+++ b/ai/12. 深度卷积神经网络.md
@@ -674,3 +674,432 @@ train(net, train_iter, test_iter, num_epochs, lr, d2l.try_gpu())
 
 ​		批量规范化在训练模式和预测模式下的行为通常不同。首先，将训练好的模型用于预测时，我们不再需要样本均值中的噪声以及在微批次上估计每个小批次产生的样本方差了。其次，例如，我们可能需要使用我们的模型对逐个样本进行预测。一种常用的方法是通过移动平均估算整个训练数据集的样本均值和方差，并在预测时使用它们得到确定的输出。可见，和暂退法一样，批量规范化层在训练模式和预测模式下的计算结果也是不一样的。
 
+```python
+import torch
+from torch import nn
+from d2l import torch as d2l
+def batch_norm(X, gamma, beta, moving_mean, moving_variance, epochs, momentum):
+    # 通过is_grad_enabled来判断当前模式是训练模式还是预测模式
+    if not torch.is_grad_enabled():
+        # 如果在预测模式下，直接使用传入的移动平均所得的均值和方差
+        X_hat = (X - moving_mean) / torch.sqrt(moving_variance + epochs)
+    else:
+        assert len(X.shape) == 2
+        if len(X.shape) == 2:
+            # 使用全连接的情况下，计算特征维上的均值和方差
+            mean = X.mean(dim=0)
+            variance = ((X - mean) ** 2).mean(dim=0)
+        else:
+            # 使用二维卷积层的情况，计算通道维上（axis=1）的均值和方差。
+            # 这里我们需要保持X的形状以便后面可以做广播运算
+            mean = X.mean(dim=(0, 2, 3), keepdim=True)
+            variance = ((X - mean) ** 2).mean(dim=(0, 2, 3), keepdim=True)
+        # 训练模式下，用当前的均值和方差做标准差
+        X_hat = (X - mean) / torch.sqrt(variance + epochs)
+        # 更新移动平均的均值和方差
+        moving_mean = momentum * moving_mean + (1.0 - momentum) * mean
+        moving_variance = moving_variance * moving_variance + (1.0 - momentum) * variance
+    # 缩放和移位
+    Y = gamma * X_hat + beta
+    return Y, moving_mean.data, moving_variance.data
+```
+
+​		我们现在可以创建一个正确的BatchNorm层。这个层将保持适当的参数：拉伸gamma和偏移beta,这两个参数将 在训练过程中更新。此外，我们的层将保存均值和方差的移动平均值，以便在模型预测期间随后使用。
+
+### 5.3 从零开始实现批量规范化层
+
+​		撇开算法细节，注意我们实现层的基础设计模式。通常情况下，我们用一个单独的函数定义其数学原理，比如 说batch_norm。然后，我们将此功能集成到一个自定义层中，其代码主要处理数据移动到训练设备（如GPU）、 分配和初始化任何必需的变量、跟踪移动平均线（此处为均值和方差）等问题。为了方便起见，我们并不担 心在这里自动推断输入形状，因此我们需要指定整个特征的数量。
+
+```
+class BatchNorm(nn.Module):
+    # num_features: 完全连接层的输出数量或卷积层的输出通道数
+    # num_dims: 2表示完全连接层 ,4表示卷积层
+    def __init__(self, num_features, num_dims):
+        super().__init__()
+        if num_dims == 2:
+            shape = (1, num_features)
+        else:
+            shape = (1, num_features, 1, 1)
+        # 参与求梯度和迭代的拉伸和偏移参数，分别初始化为1和0
+        self.gamma = nn.Parameter(torch.ones(shape))
+        self.beta = nn.Parameter(torch.zeros(shape))
+        # 非模型参数的变量初始化为0和1
+        self.moving_mean = torch.zeros(shape)
+        self.moving_variance = torch.ones(shape)
+
+    def forward(self, X):
+        # 如果X不在内存上面，将moving_mean和 moving_var 复制到显存上面
+        if self.moving_mean.device != X.device:
+            self.moving_mean = self.moving_mean.to(X.device)
+            self.moving_variance = self.moving_variance.to(X.device)
+        # 保存更新过后的moving_mean和moving_var
+        Y, self.moving_mean, self.moving_variance = batch_norm(
+            X, self.gamma, self.beta, self.moving_mean,
+            self.moving_variance, eps=1e-5, momentum=0.9
+        )
+        return Y
+```
+
+### 5.4 使用批量化规范化层的LeNet
+
+​		批量规范化是在卷积层或全连接层之后，相应的激活函数之前应用的，为了更好理解BatchNorm，我们通过将其应用到LeNet模型。
+
+```python
+net = nn.Sequential(
+    nn.Conv2d(1, 6, kernel_size=5), BatchNorm(6, num_dims=4), nn.Sigmoid(),
+    nn.AvgPool2d(kernel_size=2, stride=2),
+    nn.Conv2d(6, 16, kernel_size=5), BatchNorm(16, num_dims=4), nn.Sigmoid(),
+    nn.AvgPool2d(kernel_size=2, stride=2), nn.Flatten(),
+    nn.Linear(16 * 4 * 4, 120), BatchNorm(120, num_dims=2), nn.Sigmoid(),
+    nn.Linear(120, 84), BatchNorm(84, num_dims=2), nn.Sigmoid(),
+    nn.Linear(84, 10)
+)
+lr, num_epochs, batch_size = 1.0, 10, 256
+train_iter, test_iter = d2l.load_data_fashion_mnist(batch_size)
+d2l.train_ch6(net, train_iter, test_iter, num_epochs, lr, d2l.try_gpu())
+```
+
+![image-20240604143439413](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604143439413.png)
+
+第一个批量规范化层中学到的拉伸参数gamma和偏移参数beta。
+
+```cmd
+(tensor([4.3360, 3.1490, 2.3961, 2.4507, 1.3967, 2.3384], device='cuda:0',
+        grad_fn=<ViewBackward0>),
+ tensor([-2.4168,  3.2864, -1.1608, -2.4430,  0.3702, -2.3333], device='cuda:0',
+        grad_fn=<ViewBackward0>))
+```
+
+
+
+### 5.5 使用api实现
+
+```python
+net = nn.Sequential(
+nn.Conv2d(1, 6, kernel_size=5), nn.BatchNorm2d(6), nn.Sigmoid(),
+nn.AvgPool2d(kernel_size=2, stride=2),
+nn.Conv2d(6, 16, kernel_size=5), nn.BatchNorm2d(16), nn.Sigmoid(),
+nn.AvgPool2d(kernel_size=2, stride=2), nn.Flatten(),
+nn.Linear(256, 120), nn.BatchNorm1d(120), nn.Sigmoid(),
+nn.Linear(120, 84), nn.BatchNorm1d(84), nn.Sigmoid(),
+nn.Linear(84, 10))
+```
+
+![image-20240604143750573](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604143750573.png)
+
+
+
+### 5.6 争议
+
+​		直观地说，批量规范化被认为可以使优化更加平滑。然而，我们必须小心区分直觉和对我们观察到的现象的 真实解释。回想一下，我们甚至不知道简单的神经网络（多层感知机和传统的卷积神经网络）为什么如此有 效。即使在暂退法和权重衰减的情况下，它们仍然非常灵活，因此无法通过常规的学习理论泛化保证来解释 它们是否能够泛化到看不见的数据。
+
+​		在提出批量规范化的论文中，作者除了介绍了其应用，还解释了其原理：通过减少内部协变量偏移（internal covariate shift）。据推测，作者所说的内部协变量转移类似于上述的投机直觉，即变量值的分布在训练过程 中会发生变化。然而，这种解释有两个问题：1、这种偏移与严格定义的协变量偏移（covariate shift）非常不 同，所以这个名字用词不当；2、这种解释只提供了一种不明确的直觉，但留下了一个有待后续挖掘的问题： 为什么这项技术如此有效？本书旨在传达实践者用来发展深层神经网络的直觉。然而，重要的是将这些指导 性直觉与既定的科学事实区分开来。最终，当你掌握了这些方法，并开始撰写自己的研究论文时，你会希望 清楚地区分技术和直觉。
+
+​		随着批量规范化的普及，内部协变量偏移的解释反复出现在技术文献的辩论，特别是关于“如何展示机器 学习研究”的更广泛的讨论中。Ali Rahimi在接受2017年NeurIPS大会的“接受时间考验奖”（Test of Time Award）时发表了一篇令人难忘的演讲。他将“内部协变量转移”作为焦点，将现代深度学习的实践比作炼 金术。他对该示例进行了详细回顾 (Lipton and Steinhardt, 2018)，概述了机器学习中令人不安的趋势。此外， 一些作者对批量规范化的成功提出了另一种解释：在某些方面，批量规范化的表现出与原始论文 (Santurkar et al., 2018)中声称的行为是相反的。
+
+​		然而，与机器学习文献中成千上万类似模糊的说法相比，内部协变量偏移没有更值得批评。很可能，它作为 这些辩论的焦点而产生共鸣，要归功于目标受众对它的广泛认可。批量规范化已经被证明是一种不可或缺的 方法。它适用于几乎所有图像分类器，并在学术界获得了数万引用。
+
+### 总结
+
+• 在模型训练过程中，批量规范化利用小批量的均值和标准差，不断调整神经网络的中间输出，使整个神 经网络各层的中间输出值更加稳定。 
+
+• 批量规范化在全连接层和卷积层的使用略有不同。 
+
+• 批量规范化层和暂退层一样，在训练模式和预测模式下计算不同。 
+
+• 批量规范化有许多有益的副作用，主要是正则化。另一方面，”减少内部协变量偏移“的原始动机似乎 不是一个有效的解释。
+
+
+
+## 6. 残差网络（ResNet）
+
+​		随着我们设计越来越深的网络，深刻理解“新添加的层如何提升神经网络的性能”变得至关重要。更重要的 是设计网络的能力，在这种网络中，添加层会使网络更具表现力，为了取得质的突破，我们需要一些数学基 础知识。
+
+### 6.1 函数类
+
+​		首先，假设有一类特定的神经网络架构F，它包括学习速率和其他超参数设置。对于所有f ∈ F，存在一些参 数集（例如权重和偏置），这些参数可以通过在合适的数据集上进行训练而获得。现在假设f ∗是我们真正想 要找到的函数，如果是f ∗ ∈ F，那我们可以轻而易举的训练得到它，但通常我们不会那么幸运。相反，我们 将尝试找到一个函数f ∗ F，这是我们在F中的最佳选择。例如，给定一个具有X特性和y标签的数据集，我们可 以尝试通过解决以下优化问题来找到它：
+
+![image-20240604145656863](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604145656863.png)
+
+​		那么，怎样得到更近似真正f ∗的函数呢？唯一合理的可能性是，我们需要设计一个更强大的架构F ′。换句话 说，我们预计f ∗ F′比f ∗ F“更近似”。然而，如果F ̸⊆ F′，则无法保证新的体系“更近似”。事实上，f ∗ F′可能更糟： 如 图7.6.1所示，对于非嵌套函数（non‐nested function）类，较复杂的函数类并不总是向“真”函数f ∗靠拢 （复杂度由F1向F6递增）。在 图7.6.1的左边，虽然F3比F1更接近f ∗，但F6却离的更远了。相反对于 图7.6.1右 侧的嵌套函数（nested function）类F1 ⊆ . . . ⊆ F6，我们可以避免上述问题。
+
+![image-20240604145857520](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604145857520.png)
+
+​		图7.6.1: 对于非嵌套函数类，较复杂（由较大区域表示）的函数类不能保证更接近“真”函数（f ∗ ）。这种现 象在嵌套函数类中不会发生。
+
+​		因此，只有当较复杂的函数类包含较小的函数类时，我们才能确保提高它们的性能。对于深度神经网络，如 果我们能将新添加的层训练成恒等映射（identity function）f(x) = x，新模型和原模型将同样有效。同时， 由于新模型可能得出更优的解来拟合训练数据集，因此添加层似乎更容易降低训练误差。
+
+​		针对这一问题，何恺明等人提出了残差网络（ResNet）(He et al., 2016)。它在2015年的ImageNet图像识别挑 战赛夺魁，并深刻影响了后来的深度神经网络的设计。残差网络的核心思想是：每个附加层都应该更容易地 包含原始函数作为其元素之一。于是，残差块（residual blocks）便诞生了，这个设计对如何建立深层神经 网络产生了深远的影响。凭借它，ResNet赢得了2015年ImageNet大规模视觉识别挑战赛。
+
+
+
+### 6.2 残差块
+
+![image-20240604150742983](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604150742983.png)
+
+​		让我们聚焦于神经网络局部：如图所示，假设我们的原始输入为x，而希望学出的理想映射为f(x)（作为图上方激活函数的输入）。左图虚线框中的部分需要直接拟合出该映射f(x)，而右图虚线框中 的部分则需要拟合出残差映射f(x) − x。残差映射在现实中往往更容易优化。以本节开头提到的恒等映射作 为我们希望学出的理想映射f(x)，我们只需将 图7.6.2中右图虚线框内上方的加权运算（如仿射）的权重和偏 置参数设成0，那么f(x)即为恒等映射。实际中，当理想映射f(x)极接近于恒等映射时，残差映射也易于捕捉 恒等映射的细微波动。右图是ResNet的基础架构–残差块（residual block）。在残差块中，输入可通过 跨层数据线路更快地向前传播。
+
+​		ResNet沿用了VGG完整的3 × 3卷积层设计。残差块里首先有2个有相同输出通道数的3 × 3卷积层。每个卷积 层后接一个批量规范化层和ReLU激活函数。然后我们通过跨层数据通路，跳过这2个卷积运算，将输入直接 加在最后的ReLU激活函数前。这样的设计要求2个卷积层的输出与输入形状一样，从而使它们可以相加。如 果想改变通道数，就需要引入一个额外的1 × 1卷积层来将输入变换成需要的形状后再做相加运算。残差块的 实现如下：
+
+```python
+# 残差块
+
+import torch
+from torch import nn
+from d2l import torch as d2l
+from torch.nn import functional as F
+
+
+class Residual(nn.Module):
+    def __init__(self, input_channel, num_channel, use_1x1conv=False, strides=1):
+        super(Residual, self).__init__()
+        # 残差块里首先有2个有相同输出通道数的3 × 3卷积层 
+
+        self.conv1 = nn.Conv2d(in_channels=input_channel, out_channels=num_channel,
+                               kernel_size=3, padding=1, stride=strides)
+        self.conv2 = nn.Conv2d(num_channel, num_channel,
+                               kernel_size=3, padding=1)
+        if use_1x1conv:
+            # 引入一个额外的1 × 1卷积层改变通道数
+            self.conv3 = nn.Conv2d(in_channels=input_channel, out_channels=num_channel,
+                                   kernel_size=1, stride=strides)
+        else:
+            self.conv3 = None
+        # 批量规范化层
+        self.bn1 = nn.BatchNorm2d(num_channel)
+        self.bn2 = nn.BatchNorm2d(num_channel)
+
+    def forward(self, X):
+        Y = F.relu(self.bn1(self.conv1(X)))
+        Y = F.relu(self.bn2(self.conv2(Y)))
+        if self.conv3 is not None:
+            X = self.conv3(X)
+        Y += X
+        return F.relu(Y)
+
+
+# use_1x1conv=False
+blk = Residual(3, 3)
+X = torch.rand(4, 3, 6, 6) 
+Y = blk(X)
+print(Y.shape)
+# use_1x1conv=True
+blk = Residual(3, 3, use_1x1conv=True, strides=2)
+X = torch.rand(4, 3, 6, 6)
+Y = blk(X)
+print(Y.shape)
+
+```
+
+​		此代码生成两种类型的网络：一种是当use_1x1conv=False时，应用ReLU非线性函数之前， 将输入添加到输出。另一种是当use_1x1conv=True时，添加通过1 × 1卷积调整通道和分辨率。
+
+```cmd
+torch.Size([4, 3, 6, 6])
+torch.Size([4, 3, 3, 3])
+```
+
+
+
+### 6.3  ResNet网络
+
+​		**ResNet的前两层跟之前介绍的GoogLeNet中的一样：在输出通道数为64、步幅为2的7 × 7卷积层后，接步幅 为2的3 × 3的最大汇聚层。不同之处在于ResNet每个卷积层后增加了批量规范化层。**
+
+​		GoogLeNet在后面接了4个由Inception块组成的模块。ResNet则使用4个由残差块组成的模块，每个模块使用 若干个同样输出通道数的残差块。第一个模块的通道数同输入通道数一致。由于之前已经使用了步幅为2的 最大汇聚层，所以无须减小高和宽。之后的每个模块在第一个残差块里将上一个模块的通道数翻倍，并将高 和宽减半。
+
+```python
+
+def resnet_block(input_channels, num_channels, num_residual, first_block=False):
+    """单层网络残差块构建
+    :param input_channels: 输入通道
+    :param num_channels: 输出通道
+    :param num_residual: 残差块个数
+    :param first_block: 是否为首层
+    """
+    blk = []
+    for i in range(num_residual):
+        if i == 0 and not first_block:
+            blk.append(Residual(input_channels, num_channels, use_1x1conv=True, strides=2))
+        else:
+            blk.append(Residual(num_channels, num_channels))
+    return blk
+
+
+b1 = nn.Sequential(
+    nn.Conv2d(in_channels=1, out_channels=64, kernel_size=7, stride=2, padding=3),
+    nn.BatchNorm2d(64), nn.ReLU(),
+    nn.MaxPool2d(kernel_size=3, stride=2, padding=1)
+)
+# 接着在ResNet加入所有残差块，这里每个模块使用2个残差块。
+b2 = nn.Sequential(*resnet_block(64, 64, 2, first_block=True))
+b3 = nn.Sequential(*resnet_block(64, 128, 2))
+b4 = nn.Sequential(*resnet_block(128, 256, 2))
+b5 = nn.Sequential(*resnet_block(256, 512, 2))
+# 最后，与GoogLeNet一样，在ResNet中加入全局平均汇聚层，以及全连接层输出。
+net = nn.Sequential(b1, b2, b3, b4,b5,
+                    nn.AdaptiveAvgPool2d((1, 1)),
+                    nn.Flatten(),
+                    nn.Linear(512, 10)
+                    )
+```
+
+​		每个模块有4个卷积层（不包括恒等映射的1 × 1卷积层）。加上第一个7 × 7卷积层和最后一个全连接层，共有18层。因此，这种模型通常被称为ResNet‐18。通过配置不同的通道数和模块里的残差块数可以得到不同的ResNet模型，例如更深的含152层的ResNet‐152。虽然ResNet的主体架构跟GoogLeNet类似，但ResNet架构更简单，修改也更方便。这些因素都导致了ResNet迅速被广泛使用。图7.6.4描述了完整的ResNet‐18。
+
+![image-20240604160238252](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604160238252.png)
+
+​		在训练ResNet之前，让我们观察一下ResNet中不同模块的输入形状是如何变化的。在之前所有架构中，分辨 率降低，通道数量增加，直到全局平均汇聚层聚集所有特征。
+
+```python
+X = torch.rand(size=(1, 1, 224, 224))
+for layer in net:
+    X = layer(X)
+    print(layer.__class__.__name__, 'output shape:\t', X.shape)
+```
+
+```cmd
+Sequential output shape:	 torch.Size([1, 64, 56, 56])
+Sequential output shape:	 torch.Size([1, 64, 56, 56])
+Sequential output shape:	 torch.Size([1, 128, 28, 28])
+Sequential output shape:	 torch.Size([1, 256, 14, 14])
+Sequential output shape:	 torch.Size([1, 512, 7, 7])
+AdaptiveAvgPool2d output shape:	 torch.Size([1, 512, 1, 1])
+Flatten output shape:	 torch.Size([1, 512])
+Linear output shape:	 torch.Size([1, 10])
+```
+
+
+
+### 6.4 训练模型
+
+```python
+# 训练模型
+
+lr, num_epochs, batch_size = 0.05, 10, 256
+train_iter, test_iter = d2l.load_data_fashion_mnist(batch_size, resize=96)
+d2l.train_ch6(net, train_iter, test_iter, num_epochs, lr, d2l.try_gpu())
+```
+
+![image-20240604162659584](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604162659584.png)
+
+• 学习嵌套函数（nested function）是训练神经网络的理想情况。在深层神经网络中，学习另一层作为恒等映射（identity function）较容易（尽管这是一个极端情况）。 
+
+• 残差映射可以更容易地学习同一函数，例如将权重层中的参数近似为零。 
+
+• 利用残差块（residual blocks）可以训练出一个有效的深层神经网络：输入可以通过层间的残余连接更快地向前传播。 
+
+• 残差网络（ResNet）对随后的深层神经网络设计产生了深远影响。
+
+
+
+
+
+## 7. 稠密连接网络(DenseNet)
+
+​		ResNet极大地改变了如何参数化深层网络中函数的观点。稠密连接网络（DenseNet）(Huang et al., 2017)在 某种程度上是ResNet的逻辑扩展。让我们先从数学上了解一下。
+
+### 7.1 从ResNet到DenseNet
+
+​		回想一下任意函数的泰勒展开式（Taylor expansion），它把这个函数分解成越来越高阶的项。在x接近0时，![image-20240604162950848](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604162950848.png)
+
+同样，ResNet将函数展开为：![image-20240604163005420](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604163005420.png)
+
+​		也就是说，ResNet将f分解为两部分：一个简单的线性项和一个复杂的非线性项。那么再向前拓展一步，如 果我们想将f拓展成超过两部分的信息呢？一种方案便是DenseNet。![image-20240604163123771](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604163123771.png)
+
+​		如图所示，ResNet和DenseNet的关键区别在于，DenseNet输出是连接（用图中的[, ]表示）而不是 如ResNet的简单相加。因此，在应用越来越复杂的函数序列后，我们执行从x到其展开式的映射：![image-20240604163257317](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604163257317.png)
+
+​		最后，将这些展开式结合到多层感知机中，再次减少特征的数量。实现起来非常简单：我们不需要添加术语， 而是将它们连接起来。DenseNet这个名字由变量之间的“稠密连接”而得来，最后一层与之前的所有层紧密 相连。稠密连接如 图7.7.2所示。
+
+![image-20240604163422833](https://raw.githubusercontent.com/kaisersama112/typora_image/master/image-20240604163422833.png)
+
+​		稠密网络主要由2部分构成：稠密块（dense block）和过渡层（transition layer）。前者定义如何连接输入和 输出，而后者则控制通道数量，使其不会太复杂。
+
+
+
+### 7.2 稠密块体
+
+​		DenseNet使用了ResNet改良版的“批量规范化、激活和卷积”架构，我们首先实现一 下这个架构。
+
+```python
+def conv_block(input_channel, num_channel):
+    return nn.Sequential(
+        nn.BatchNorm2d(input_channel), nn.ReLU(),
+        nn.Conv2d(num_channel, num_channel, kernel_size=3, padding=1)
+    )
+```
+
+​		一个稠密块由多个卷积块组成，每个卷积块使用相同数量的输出通道。然而，在前向传播中，我们将每个卷 积块的输入和输出在通道维上连结。
+
+```python
+def conv_block(input_channel, num_channel):
+    return nn.Sequential(
+        nn.BatchNorm2d(input_channel), nn.ReLU(),
+        nn.Conv2d(input_channel, num_channel, kernel_size=3, padding=1)
+    )
+
+
+class DenseBlock(nn.Module):
+    def __init__(self, num_convs, input_channels, num_channels):
+        super(DenseBlock, self).__init__()
+        layer = []
+        for i in range(num_convs):
+            print(num_channels * i + input_channels, num_channels)
+            layer.append(conv_block(
+                num_channels * i + input_channels, num_channels
+            ))
+        self.net = nn.Sequential(*layer)
+
+    def forward(self, X):
+        for blk in self.net:
+            Y = blk(X)
+            # 连接通道维度上每个块的输入和输出
+            print(X.shape, Y.shape)
+            X = torch.cat((X, Y), dim=1)
+        return X
+
+
+blk = DenseBlock(2, 3, 10)
+X = torch.randn(4, 3, 8, 8)
+Y = blk(X)
+print(Y.shape)
+
+```
+
+​		在上面的例子中，我们定义一个有2个输出通道数为10的DenseBlock。使用通道数为3的输入时，我们会得到 通道数为3 + 2 × 10 = 23的输出。卷积块的通道数控制了输出通道数相对于输入通道数的增长，因此也被称 为增长率（growth rate）。
+
+```cmd
+3 10
+13 10
+torch.Size([4, 3, 8, 8]) torch.Size([4, 10, 8, 8])
+torch.Size([4, 13, 8, 8]) torch.Size([4, 10, 8, 8])
+torch.Size([4, 23, 8, 8])
+```
+
+
+
+###  7.3 过渡层
+
+​	由于每个稠密块都会带来通道数的增加，使用过多则会过于复杂化模型。而过渡层可以用来控制模型复杂度。 它通过1 × 1卷积层来减小通道数，并使用步幅为2的平均汇聚层减半高和宽，从而进一步降低模型复杂度。
+
+```python
+# 过渡层
+
+def transition_block(input_channel, num_channel):
+    return nn.Sequential(
+        nn.BatchNorm2d(input_channel), nn.ReLU(),
+        nn.Conv2d(input_channel, num_channel, kernel_size=1),
+        nn.AvgPool2d(kernel_size=2, stride=2)
+    )
+#对上一个例子中稠密块的输出使用通道数为10的过渡层。此时输出的通道数减为10，高和宽均减半。
+blk = transition_block(23, 10)
+blk(Y).shape
+
+```
+
+```cmd
+torch.Size([4, 10, 4, 4])
+```
+
+
+
+### 7.4 DenseNet模型
+
+​		我们来构造DenseNet模型。DenseNet首先使用同ResNet一样的单卷积层和最大汇聚层。
