--- a/机器学习/12. 深度卷积神经网络.md
+++ b/机器学习/12. 深度卷积神经网络.md
@@ -1104,6 +1104,62 @@ torch.Size([4, 10, 4, 4])
 
 ​		我们来构造DenseNet模型。DenseNet首先使用同ResNet一样的单卷积层和最大汇聚层。
 
+​		DenseNet使用的是4个稠密块。与ResNet类似，我们可以设置每个 稠密块使用多少个卷积层。这里我们设成4，从而与 7.6节的ResNet‐18保持一致。稠密块里的卷积层通道数 （即增长率）设为32，所以每个稠密块将增加128个通道。 
+
+​		在每个模块之间，ResNet通过步幅为2的残差块减小高和宽，DenseNet则使用过渡层来减半高和宽，并减半 通道数。
+
+​		与ResNet类似，最后接上全局汇聚层和全连接层来输出结果。
+
 ```python
+# 构建DenseNet模型
+
+b1 = nn.Sequential(
+    nn.Conv2d(1, 64, kernel_size=7, padding=3),
+    nn.BatchNorm2d(64), nn.ReLU(),
+    nn.MaxPool2d(kernel_size=3, stride=2, padding=1)
+)
+
+num_channels, growth_rate = 64, 32
+num_convs_in_dense_blocks = [4, 4, 4]
+blocks = []
+for i, num_convs in enumerate(num_convs_in_dense_blocks):
+    blocks.append(
+        DenseBlock(num_convs, num_channels, growth_rate)
+    )
+    # 上一个稠密块的输出通道数
+    num_channels += num_convs * growth_rate
+    # 在稠密快之间添加一个转换层，使通道数量减半
+    if i != len(num_convs_in_dense_blocks) - 1:
+        blocks.append(
+            transition_block(num_channels, num_channels // 2)
+        )
+        num_channels = num_channels // 2
+
+net = nn.Sequential(
+    b1,
+    *blocks,
+    nn.BatchNorm2d(num_channels), nn.ReLU(),
+    nn.AdaptiveAvgPool2d((1, 1)),
+    nn.Flatten(),
+    nn.Linear(num_channels, 10)
+)
+
 ```
 
+### 7.5 训练模型
+
+```python
+# 训练模型
+lr, num_epochs, batch_size = 0.01, 10, 256
+train_iter, test_iter = d2l.load_data_fashion_mnist(batch_size, resize=256)
+d2l.train_ch6(net, train_iter, test_iter, num_epochs, lr, d2l.try_gpu())
+
+```
+
+
+
+• 在跨层连接上，不同于ResNet中将输入与输出相加，稠密连接网络（DenseNet）在通道维上连结输入 与输出。 
+
+• DenseNet的主要构建模块是稠密块和过渡层。 
+
+• 在构建DenseNet时，我们需要通过添加过渡层来控制网络的维数，从而再次减少通道的数量。
