--- a/机器学习/1. 初认.md
+++ b/机器学习/1. 初认.md
@@ -1,4 +1,4 @@
-## 1. 什么是机器学习？
+### 1. 什么是机器学习？
 
 ​	第一个机器学习的定义来自于**Arthur Samuel**。他定义机器学习为，在进行特定编程的情况下，给予计算机学习能力的领域。
 
@@ -6,7 +6,7 @@
 
 ​	不同类型的学习算法，目前主要的两种类型被我们称之为**监督学习**和**无监督学习**。
 
-### 1.1 监督学习
+#### 1.1 监督学习
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-fd3531d0b9369139177a916b228550eb_720w.webp)
 
@@ -14,13 +14,13 @@
 
 ​	我们给学习算法一个数据集，这个数据集由正确的答案组成，数据集中的每一个样本都有相应正确的答案，学习算法通过不断拟合这些样本数据，最后再根据样本数据推理出正确答案（监督学习，主要用于**分类问题**及其**回归问题**）。
 
-### 1.2 无监督学习
+#### 1.2 无监督学习
 
 ​	无监督学习中没有任何的标签或者是有相同的标签或者就是没标签。所以我们已知数据集，却不知如何处理，也未告知每个数据点是什么。别的都不知道，就是一个数据集。你能从数据中找到某种结构吗？针对数据集，无监督学习就能判断出数据有两个不同的聚集簇。这是一个，那是另一个，二者不同。是的，无监督学习算法可能会把这些数据分成两个不同的簇。所以叫做**聚类算法**。事实证明，它能被用在很多地方。
 
 
 
-## 2. 单变量线性回归(Linear Regression with One Variable)
+### 2. 单变量线性回归(Linear Regression with One Variable)
 
 ​	所谓线性回归：指因变量(y)与自变量(x)之间存在线性关系，我们可以用某一线性回归模型来拟合因变量与自变量的数值，并采用某种估计方法来确定模型的有关参数来得到具体的回归方程。如果在回归分析中，只包含一个自变量与一个因变量并且两者的关系可以用一条直线来近似表示，那么这种回归称为单变量线性回归，如果回归分析中包含两个或者两个以上的自变量，并且自变量和因变量之间存在线性关系，则称之为多变量线性回归。
 
@@ -28,7 +28,7 @@
 
 单变量线性回归：是在两个变量之间建立类似线性方程的拟合模型，以一个变量去预测另一个变量。他之所以简单是因为涉及的变量比较少仅仅是两个变量拟合与预测，而不像决策树、K近邻等算法通常要考虑多维变量之间的关系。
 
-### 2.1 模型表示
+#### 2.1 模型表示
 
 ​	单变量线性回归指的是只有一个自变量。有如下这样一个训练集，特征为房子的大小，因变量是房价。那么对于一个新的房子的大小，我们如何根据历史的数据来预测出来该房子的价格呢？
 
@@ -60,7 +60,7 @@ $$
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsv2-d19e51a8b286977143b2fc8368022a93_720w.webp)
 
-### 2.2 代价函数
+#### 2.2 代价函数
 
 ​	![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsd385f8a293b254454746adee51a027d4.png)
 
@@ -91,7 +91,7 @@ $$
 
 
 
-### 2.3 代价函数的直观理解 l
+#### 2.3 代价函数的直观理解 l
 
 ​	![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets10ba90df2ada721cf1850ab668204dc9.png)
 
@@ -105,7 +105,7 @@ $$
 
 ​	当函数预测值与实际值差值越大，损失函数的值也就越大。（引出后面的梯度下降算法，通过减少损失值的值，从而实现对原函数参数进行更新）
 
-### 2.4 代价函数的直观理解 II
+#### 2.4 代价函数的直观理解 II
 
 
 
@@ -121,7 +121,7 @@ $$
 
 
 
-### 2.5 梯度下降
+#### 2.5 梯度下降
 
 ​	梯度下降是一个用来求函数最小值的算法，我们使用梯度下降算法来求出代价函数![image-20231123114948855](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231123114948855.png) 的最小值。
 
@@ -142,7 +142,7 @@ $$
 
 ![img](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assets13176da01bb25128c91aca5476c9d464.png)
 
-### 2.6 梯度下降的直观感受
+#### 2.6 梯度下降的直观感受
 
 ​	![image-20231125194421712](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125194421712.png)
 
@@ -176,7 +176,7 @@ $$
 
 ​	**梯度下降算法，你可以用它来最小化任何代价函数![image-20231125200003502](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200003502.png)，不只是线性回归中的代价函数![image-20231125200006781](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200006781.png)。**
 
-### 2.7 梯度下降的线性回归
+#### 2.7 梯度下降的线性回归
 
 ​	梯度下降是很常用的算法，它不仅被用在线性回归上和线性回归模型、平方误差代价函数。
 
@@ -190,11 +190,8 @@ $$
 
 ![image-20231125200824683](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125200824683.png)
 
-## 3. 线性代数
-
-
-
-### 3.1 矩阵和向量
+### 3. 线性代数
+#### 3.1 矩阵和向量
 
 ​	![image-20231125201135190](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201135190.png)
 
@@ -202,11 +199,11 @@ $$
 
 ![image-20231125201156400](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201156400.png)
 
-### 3.2 加法和标量乘法
+#### 3.2 加法和标量乘法
 
 ​	![image-20231125201447237](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201447237.png)
 
-### 3.3 矩阵向量乘法
+#### 3.3 矩阵向量乘法
 
 ​	**矩阵（m \*n）与向量（m\*n）相乘需要注意:矩阵的列数需要与响亮的行数相同才能进行运算**
 
@@ -214,7 +211,7 @@ $$
 
 ![image-20231125201938278](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125201938278.png)
 
-### 3.4 矩阵乘法
+#### 3.4 矩阵乘法
 
 ​	矩阵乘法： 矩阵(m\*n) \* 矩阵（n\*o）= 矩阵(m\*o)
 
@@ -222,10 +219,10 @@ $$
 
 ​	![image-20231125202220736](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125202220736.png)
 
-### 3.5 矩阵乘法的性质
+#### 3.5 矩阵乘法的性质
 
 ​	![image-20231125202259342](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125202259342.png)
 
-### 3.6 逆、转置
+#### 3.6 逆、转置
 
 ![image-20231125202556328](https://raw.githubusercontent.com/kaisersama112/typora_image/master/assetsimage-20231125202556328.png)
